[workspace]
members = ["crates/porter-texture", "crates/porter-console", "crates/porter-process", "crates/porter-audio", "crates/porter-math", "crates/porter-utils", "crates/porter-threads", "crates/porter-model", "crates/porter-ui", "crates/porter-animation", "crates/porter-cast", "crates/porter-fbx", "crates/porter-gpu", "crates/porter-preview"]
resolver = "2"

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
strip = true
panic = "abort"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "f5c6fa7338713a0430dcdfc5bd53f72103144f22" }
