[workspace]
members = ["crates/porter-texture", "crates/porter-console", "crates/porter-http", "crates/porter-process", "crates/porter-audio", "crates/porter-math", "crates/porter-utils", "crates/porter-threads", "crates/porter-model", "crates/porter-ui", "crates/porter-animation", "crates/porter-cast", "crates/porter-fbx", "crates/porter-gpu", "crates/porter-preview", "crates/porter-world"]
resolver = "2"

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
strip = true
panic = "abort"

[patch.crates-io]
iced = { git = "https://github.com/dtzxporter/iced", rev = "d4fc744243da36d7fc1c62d30b38306f2c8caa2f" }
