[workspace]
members = [
    "crates/porter-texture",
    "crates/porter-console",
    "crates/porter-process",
    "crates/porter-audio",
    "crates/porter-math",
    "crates/porter-utils",
    "crates/porter-threads",
    "crates/porter-model",
    "crates/porter-animation",
    "crates/porter-cast",
    "crates/porter-fbx",
    "crates/porter-build",
    "crates/porter-gpu",
    "crates/porter-viewport",
    "crates/porter-app",
    "crates/porter-world",
    "crates/porter-http",
]
resolver = "2"

[workspace.dependencies]
# Gui
unicode-segmentation = "1.11"
lyon_algorithms = { version = "1.0", default-features = false }
raw-window-handle = { version = "0.6", default-features = false }
rfd = { version = "0.15", default-features = false, features = ["gtk3", "common-controls-v6"] }
iced = { version = "0.14.0-dev", default-features = false, features = [
    "image-without-codecs",
    "canvas",
    "advanced",
    "wgpu-without-backends",
] }

# Windows
winres = "0.1"
windows-sys = { version = "0.60", default-features = false, features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_ProcessStatus",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_Networking_WinHttp",
    "Wdk_System_SystemInformation",
] }

# Linux/macOS
libc = "0.2"
procfs = "0.18"
mach2 = "0.5"

# Http
curl-sys = { version = "0.4", default-features = false }

# Images
png = { version = "0.18", default-features = false }
tiff = { version = "0.10", default-features = false, features = ["deflate"] }

# Audio
claxon = { version = "0.4", default-features = false }
flacenc = { version = "0.5", default-features = false }
lewton = { version = "0.10", default-features = false }

# Compression
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode", "safe-decode"] }

# Utilities
memchr = "2.7"
bitflags = "2.9"
termcolor = "1.3"
directories = "6.0"
build-target = "0.8"
static_assertions = { version = "1.1" }
rayon = { version = "1.11", default-features = false }
pico-args = { version = "0.5", default-features = false, features = ["eq-separator"] }
bincode = { version = "2.0", default-features = false, features = ["std", "derive"] }
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }

# Math
unroll = "0.1.5"
half = { version = "2.6", default-features = false, features = ["std"] }

# Gpu
pollster = "0.4"
wgpu = { version = "26.0", default-features = false, features = ["wgsl", "metal", "vulkan"] }

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1

# Requires the following PRs be merged:
# https://github.com/iced-rs/iced/pull/2768
# https://github.com/iced-rs/iced/pull/2820
# https://github.com/iced-rs/iced/pull/2828
# https://github.com/iced-rs/iced/pull/2837
# https://github.com/iced-rs/iced/pull/2887
# https://github.com/iced-rs/iced/pull/3068
[patch.crates-io]
iced = { git = "https://github.com/dtzxporter/iced", rev = "d993b7da9809fe6c19ade6c0e776787c65d3b72e" }
