[package]
name = "porter-app"
version = "0.1.0"
edition = "2024"

[dependencies]
porter-utils = { path = "../porter-utils" }
porter-math = { path = "../porter-math" }
porter-texture = { path = "../porter-texture" }
porter-animation = { path = "../porter-animation" }
porter-viewport = { path = "../porter-viewport" }
porter-audio = { path = "../porter-audio" }
porter-model = { path = "../porter-model" }
porter-threads = { path = "../porter-threads" }

bincode.workspace = true
bitflags.workspace = true
directories.workspace = true
iced.workspace = true
lyon_algorithms.workspace = true
rfd.workspace = true
unicode-segmentation.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle.workspace = true
windows-sys.workspace = true

[features]
# Enables animation assets.
animations = []
# Enables material assets.
materials = []
# Enables sound assets.
sounds = []
# Enables raw file assets.
raw-files = []

# Enables loading of multiple files at once.
multi-file = []
# Enables sRGB gamma correction for model material previews.
srgb-preview = []
# Enables preview to start opened with the app.
start-preview = []
# Enables sound conversion.
sounds-convertible = []
# Enables normal map conversion.
normal-maps-convertible = []
# Enables forceable raw files.
raw-files-forcible = []
