[package]
name = "porter-audio"
version = "0.1.0"
edition = "2024"

[features]
ms-adpcm = []
wwise-vorbis = ["dep:lewton"]
raw-flac = []
ogg = ["dep:lewton", "lewton/ogg"]
debug = []

[dependencies]
porter-utils = { path = "../porter-utils" }

claxon.workspace = true
flacenc.workspace = true
bincode.workspace = true
lewton = { workspace = true, optional = true }
