[package]
name = "porter-console"
version = "0.1.0"
edition = "2021"

[dependencies]
termcolor = "1.3"
pico-args = { version = "0.5", default-features = false, features = ["eq-separator"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48", default-features = false, features = ["Win32_Foundation", "Win32_System_Console"] }
widestring = "1.0"
