[package]
name = "porter-http"
version = "0.1.0"
edition = "2024"


[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", default-features = false, features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_Networking_WinHttp",
] }

[target.'cfg(target_os = "macos")'.dependencies]
curl-sys = { version = "0.4", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
curl-sys = { version = "0.4", default-features = false }
