[package]
name = "porter-http"
version = "0.1.0"
edition = "2024"

[dependencies]
porter-utils = { path = "../porter-utils" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
curl-sys.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
curl-sys.workspace = true
