[package]
name = "porter-model"
version = "0.1.0"
edition = "2021"

[dependencies]
porter-math = { path = "../porter-math" }
porter-utils = { path = "../porter-utils" }
porter-cast = { path = "../porter-cast" }
porter-fbx = { path = "../porter-fbx" }
static_assertions = { version = "1.1" }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["std", "derive"] }
