[package]
name = "porter-model"
version = "0.1.0"
edition = "2024"

[dependencies]
porter-math = { path = "../porter-math" }
porter-utils = { path = "../porter-utils" }
porter-cast = { path = "../porter-cast" }
porter-fbx = { path = "../porter-fbx" }

static_assertions.workspace = true
bincode.workspace = true
