[package]
name = "porter-process"
version = "0.1.0"
edition = "2024"

[dependencies]
porter-utils = { path = "../porter-utils" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true
mach2.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
procfs.workspace = true
