[package]
name = "porter-texture"
version = "0.1.0"
edition = "2024"

[dependencies]
porter-utils = { path = "../porter-utils" }
porter-gpu = { path = "../porter-gpu" }
porter-math = { path = "../porter-math" }

wgpu.workspace = true
png.workspace = true
tiff.workspace = true
bincode.workspace = true
